# palautusrepositorio

./: README.md
viikko2/git-branch-harjoitus/: README.md
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/src/: project.py  project_reader.py
viikko3/hello-robot/: log.html  output.xml  report.html
viikko4/maksukortti-mock/src/: kassapaate.py
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
